# FX-anotator-ai-translator

./: .editorconfig  .env.example  .gitignore  .metrics.csv  CHANGELOG.md  LICENSE  Makefile  README.md  dev.ps1  main.py  pyproject.toml  requirements.txt
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
fx_translator/api/: __init__.py  base.py  huridocs.py  layoutlmv3.py  lmstudio.py
fx_translator/core/: __init__.py  config.py  exceptions.py  models.py  types.py
fx_translator/export/: __init__.py  docx.py  pdf.py
fx_translator/gui/: __init__.py  app.py  handlers.py
fx_translator/orchestration/: __init__.py  docker.py
fx_translator/processing/: __init__.py  pipeline.py
fx_translator/processing/analyzers/: __init__.py  layout.py  segments.py
fx_translator/processing/extractors/: pymupdf.py
fx_translator/utils/: __init__.py  geometry.py  json_helpers.py  metrics.py  text.py
