toml
[project]
name = "fx-translator"
version = "0.1.0"
description = "PDF annotation and AI translation tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"