[project]
name = "fx-translator"
version = "0.1.0"
description = "PDF annotation and AI translation tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Постепенное введение типов
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Игнорируем отсутствующие импорты для некоторых библиотек
[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pymupdf",
    "pymupdf.*",
    "docx",
    "docx.*",
    "PIL",
    "PIL.*",
]
ignore_missing_imports = true

# Настройки для fx_translator пакета
[[tool.mypy.overrides]]
module = "fx_translator.*"
disallow_untyped_defs = false
check_untyped_defs = true